--- a/docs/docs/services/s3.rst
+++ b/docs/docs/services/s3.rst
@@ -40,7 +40,7 @@ s3
 - [ ] delete_bucket_inventory_configuration
 - [X] delete_bucket_lifecycle
 - [ ] delete_bucket_metrics_configuration
-- [ ] delete_bucket_ownership_controls
+- [X] delete_bucket_ownership_controls
 - [X] delete_bucket_policy
 - [X] delete_bucket_replication
 - [X] delete_bucket_tagging
@@ -63,7 +63,7 @@ s3
 - [ ] get_bucket_metrics_configuration
 - [ ] get_bucket_notification
 - [X] get_bucket_notification_configuration
-- [ ] get_bucket_ownership_controls
+- [X] get_bucket_ownership_controls
 - [X] get_bucket_policy
 - [ ] get_bucket_policy_status
 - [X] get_bucket_replication
@@ -105,7 +105,7 @@ s3
 - [ ] put_bucket_metrics_configuration
 - [ ] put_bucket_notification
 - [X] put_bucket_notification_configuration
-  
+
         The configuration can be persisted, but at the moment we only send notifications to the following targets:
 
          - AWSLambda
@@ -117,7 +117,7 @@ s3
          - 's3:ObjectCreated:Put'
         
 
-- [ ] put_bucket_ownership_controls
+- [X] put_bucket_ownership_controls
 - [X] put_bucket_policy
 - [X] put_bucket_replication
 - [ ] put_bucket_request_payment
