--- a/docs/docs/services/s3.rst
+++ b/docs/docs/services/s3.rst
@@ -122,7 +122,7 @@ s3
 - [X] put_bucket_replication
 - [ ] put_bucket_request_payment
 - [X] put_bucket_tagging
-- [ ] put_bucket_versioning
+- [X] put_bucket_versioning
 - [ ] put_bucket_website
 - [X] put_object
 - [X] put_object_acl
