S3: get_object_attributes()

--- a/docs/docs/services/s3.rst
+++ b/docs/docs/services/s3.rst
@@ -73,7 +73,11 @@ s3
 - [ ] get_bucket_website
 - [X] get_object
 - [X] get_object_acl
-- [ ] get_object_attributes
+- [X] get_object_attributes
+  
+        The following attributes are not yet returned: DeleteMarker, RequestCharged, ObjectParts
+        
+
 - [X] get_object_legal_hold
 - [X] get_object_lock_configuration
 - [ ] get_object_retention
